2001-09-17  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: More protection against unexpected white space.

	* Services.pm (collapse_space): New function to collapse all white
	space in a string into a single space. Useful to eliminate
	newlines in fields that shouldn't have any.

2001-09-13  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (get_binary_depends): Convert newlines to spaces.

2001-09-12  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (resolve_depends): Include build-time dependencies
	when requested (new field BuildDepends).
	* Engine.pm (real_install): Check build-time dependencies if the
	package is going to be built.

2001-09-12  Max Horn  <max@quendi.de>

	* Engine.pm: Added 'apropos' command analog to the Unix 'apropos'
	
2001-09-11  Christoph Pfisterer  <cp@chrisp.de>

	* SelfUpdate.pm (check): Adapted to the new structure, check
	against the distribution version.

	* FinkVersion.pm.in: Added functions to retreive package manager
	and distribution versions.

	* Services.pm: Resolved circular dependency between Services and
	Config.

2001-09-09  Christoph Pfisterer  <cp@chrisp.de>

	* Status.pm (read): Make non-existence of the dpkg status file
	non-fatal.

	* Package.pm (get_matching_versions): Implemented the version
	comparisons supported by dpkg.
	* PkgVersion.pm (initialize): Removed special handling for the
	Depends field.
	(get_depends): Removed, not needed any more.
	(resolve_depends): Rewritten to allow versioned dependencies and
	alternatives.
	(get_binary_depends): New function to generate dependencies for
	the .deb.
	(phase_build): Use get_binary_depends for the Depends field. Added
	Recommends, Suggests, Enhances and Pre-Depends.

2001-09-07  Christoph Pfisterer  <cp@chrisp.de>

	* Bootstrap.pm: Create dpkg status area earlier.

2001-09-06  Christoph Pfisterer  <cp@chrisp.de>

	* Status.pm (list): Added list() method to retreive the whole
	list, independent of installation status.